--- a/src/main/resources/assets/magicfeather/lang/fr_fr.json
+++ b/src/main/resources/assets/magicfeather/lang/fr_fr.json
@@ -1,5 +1,6 @@
 {
-  "item.magicfeather.magicfeather": "Plume Magique",
-  "item.magicfeather.magicfeather.tooltip.description": "Donne la capacité de voler à proximité d'un beacon",
-  "item.magicfeather.magicfeather.tooltip.requires_curios": "À placer dans l'emplacement pour charmes"
+  "item.magicfeather.magic_feather": "Plume Magique",
+  "item.magicfeather.arcane_feather": "Plume Arcanique",
+  "item.magicfeather.magic_feather.tooltip.description": "Donne la capacité de voler à proximité d'un beacon",
+  "item.magicfeather.magic_feather.tooltip.requires_curios": "À placer dans l'emplacement pour charmes"
 }
