--- a/src/main/resources/assets/magicfeather/lang/en_us.json
+++ b/src/main/resources/assets/magicfeather/lang/en_us.json
@@ -4,6 +4,9 @@
   "item.magicfeather.primeval_feather": "Primeval Feather",
   "item.magicfeather.stygian_feather": "Stygian Feather",
   "item.magicfeather.magic_feather.tooltip.description": "Grants flight abilities when near a beacon",
+  "item.magicfeather.arcane_feather.tooltip.description": "Grants unlimited flight abilities.",
+  "item.magicfeather.primeval_feather.tooltip.description": "Grants flight abilities, until its durability runs out.",
+  "item.magicfeather.stygian_feather.tooltip.description": "Grants unlimited flight abilities, but at a cost.",
   "item.magicfeather.magic_feather.tooltip.requires_curios": "Place in Charm slot",
   "item.magicfeather.arcane_feather.tooltip.requires_curios": "Place in Charm slot",
   "item.magicfeather.primeval_feather.tooltip.requires_curios": "Place in Charm slot",
